force-app/main/default/objects/IN_UnifiedAPI_Landing__c/IN_UnifiedAPI_Landing__c.object-meta.xml
<CustomObject>
    <label>IN UnifiedAPI Landing</label>
    <nameField>
        <label>IN UnifiedAPI Landing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IN UnifiedAPI Landings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>