force-app/main/default/objects/IN_UnifiedAPI_Landing__c/fields/addr_state__c.field-meta.xml
<CustomField>
    <fullName>addr_state__c</fullName>
    <label>Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>