force-app/main/default/objects/IN_UnifiedAPI_Landing__c/fields/contact_height__c.field-meta.xml
<CustomField>
    <fullName>contact_height__c</fullName>
    <label>Contact Height (cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>