force-app/main/default/objects/IN_UnifiedAPI_Landing__c/fields/contact_type__c.field-meta.xml
<CustomField>
    <fullName>contact_type__c</fullName>
    <label>Contact Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>