force-app/main/default/objects/IN_UnifiedAPI_Landing__c/fields/contact_whatsapp_optout__c.field-meta.xml
<CustomField>
    <fullName>contact_whatsapp_optout__c</fullName>
    <label>Contact Whatsapp Opt Out</label>
    <length>100</length>
    <type>Text</type>
</CustomField>