force-app/main/default/objects/IN_UnifiedAPI_Landing__c/fields/cr_are_you_pregnant__c.field-meta.xml
<CustomField>
    <fullName>cr_are_you_pregnant__c</fullName>
    <label>CR Are You Pregnant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>