force-app/main/default/objects/IN_UnifiedAPI_Landing__c/fields/customer_relationship__c.field-meta.xml
<CustomField>
    <fullName>customer_relationship__c</fullName>
    <label>Customer Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>