force-app/main/default/objects/IN_UnifiedAPI_Landing__c/fields/error_handle_2__c.field-meta.xml
<CustomField>
    <fullName>error_handle_2__c</fullName>
    <label>Error Handle 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>