force-app/main/default/objects/IN_UnifiedAPI_Landing__c/fields/nh_bmi_result__c.field-meta.xml
<CustomField>
    <fullName>nh_bmi_result__c</fullName>
    <label>NH BMI Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>