force-app/main/default/objects/IN_UnifiedAPI_Landing__c/fields/nh_childfacingproblem__c.field-meta.xml
<CustomField>
    <fullName>nh_childfacingproblem__c</fullName>
    <label>NH Child Facing Problem</label>
    <length>150</length>
    <type>Text</type>
</CustomField>